rns-lang/tests/snapshots/lexer-integers-invalid_format_mixed.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.limit 12a34

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ tests/testdata/lexer/integers/invalid_format_mixed.ja:1:8 ]
   │
 1 │ .limit 12a34
   │        ──┬──  
   │          ╰──── '12a34' is not a valid integer
   │ 
   │ Note: Expected a valid integer number.
───╯
